[gd_scene load_steps=17 format=3 uid="uid://ctdbbhn6kg0fl"]

[ext_resource type="Script" path="res://script/player.gd" id="1_6p811"]
[ext_resource type="Texture2D" uid="uid://bhbd2h3wxw4vg" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="2_68km6"]
[ext_resource type="Texture2D" uid="uid://dmg3cllnioypv" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_fsk13"]
[ext_resource type="Texture2D" uid="uid://djv8nsm45wyo2" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="3_heh13"]
[ext_resource type="Texture2D" uid="uid://bajalk6widlgb" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="4_27c1p"]
[ext_resource type="AudioStream" uid="uid://bn82gowm8jkj6" path="res://musics/jump.wav" id="6_ttpdb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cdp3j"]
atlas = ExtResource("2_68km6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bbyo"]
atlas = ExtResource("2_68km6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbx1h"]
atlas = ExtResource("2_68km6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_roi3s"]
atlas = ExtResource("2_68km6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqsl"]
atlas = ExtResource("2_fsk13")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsgy8"]
atlas = ExtResource("2_fsk13")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pj5j"]
atlas = ExtResource("4_27c1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5bha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdp3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bbyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbx1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roi3s")
}],
"loop": true,
"name": &"corrida",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_heh13")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsgy8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pj5j")
}],
"loop": true,
"name": &"pulo",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l0kpd"]
radius = 6.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obve8"]
size = Vector2(16, 10.75)

[node name="player" type="CharacterBody2D"]
position = Vector2(101, 139)
collision_mask = 22
script = ExtResource("1_6p811")

[node name="boneco" type="AnimatedSprite2D" parent="."]
position = Vector2(50, 262)
scale = Vector2(-0.96921, 0.826293)
sprite_frames = SubResource("SpriteFrames_r5bha")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(50, 267)
shape = SubResource("CapsuleShape2D_l0kpd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(50, 266.375)
shape = SubResource("RectangleShape2D_obve8")
debug_color = Color(0.980392, 0, 0.372549, 0.419608)

[node name="Remote" type="RemoteTransform2D" parent="."]
position = Vector2(48, 265)

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(58, 267)
scale = Vector2(0.994492, 0.799928)
target_position = Vector2(4, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(42, 267)
scale = Vector2(1.01036, 0.935475)
target_position = Vector2(-4, 0)
collision_mask = 4

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ttpdb")
volume_db = -27.262

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
